@@ -9,6 +9,7 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
     they don't have an openid.
   * Converted openid-selector into a more generic loginselector helper
     plugin.
+  * passwordauth: Don't allow registering accounts that look like openids.
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
